# Creating-fusion-layer

./: README.md
fusion_data_sim/: CMakeLists.txt  package.xml
fusion_data_sim/src/: talker.cpp
fusion_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
fusion_layers/include/fusion_layers/: fusion_layer.h
fusion_layers/src/: fusion_layer.cpp
fusion_msg/: CMakeLists.txt  package.xml
fusion_msg/msg/: AgentState.msg  AgentStates.msg
